# solo-eikaiwa

./: .gitignore  AGENTS.md  CHANGELOG.md  Caddyfile  LICENSE  README.md  toolchain.json
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: audit.yml  pages.yml  verify.yml
app/: .env.example  package.json  tsconfig.json
app/client/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
app/server/: api-key-origin-store.ts  assessment.ts  chunks.ts  coach.ts  codex-auth.ts  content-audio.ts  content-gen-markdown.ts  content-gen.ts  content.ts  converse.ts  database-backup.ts  (+44 more)
desktop/: README.md  build-sidecar.sh
desktop/src-tauri/: AppStoreEntitlements.plist  AppStoreRuntimeEntitlements.plist  Cargo.toml  Info.plist  PrivacyInfo.xcprivacy  build.rs  tauri.appstore.conf.json  tauri.conf.json
desktop/src-tauri/src/: attach.rs  keychain_helper.rs  lib.rs  navigation.rs  sidecar.rs  updater.rs  updater_signature.rs
docs/: a11y-manual-checks.md  app-store-submission.md  apple-account-holder-request.md  apple-distribution-runbook.md  metrics.md  support-disclosure.md
scripts/: audit-dependencies.sh  build-app-store.sh  check-codex-protocol.sh  check-spoken-register.ts  check-toolchain.sh  check-updater-key-policy.sh  create-release-provenance.sh  daemon-server.sh  data-backup.ts  generate-content-audio.ts  generate-content.ts  generate-topic-assets.ts  install-bun-deps.sh  install-daemon.sh  release-desktop.sh  setup.sh  status-daemon.sh  uninstall-daemon.sh  verify.sh
site/: index.html  legal.css  privacy.html  support.html
(+378 files in other folders)
