[package]
name = "app"
version = "0.29.2"
default-run = "app"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
sha2 = "0.10"

[dependencies]
base64 = "0.22.1"
minisign-verify = "0.2.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
ureq = { version = "3.2.1", default-features = false }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
sys-locale = "0.3"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "time"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
